# Text_To_SQL

./: .env.example  .gitignore  Makefile  README.md  app.py  eval_results.json  mermaid.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/adr/: 001-llm-provider-abstraction.md  002-003-schema-context-and-ast-validation.md
scripts/: create_cosql_fixtures.py  evaluate.py  evaluate_cross_db.py  run_pipeline.py
src/nl_to_sql/: __init__.py  graph.py  state.py
src/nl_to_sql/agents/: __init__.py  a1_sql_composer.py  base.py
src/nl_to_sql/agents/providers/: groq.py  ollama.py
src/nl_to_sql/cache/: schema_cache.py
src/nl_to_sql/errors/: types.py
src/nl_to_sql/tools/: t1_schema_introspector.py  t2_schema_normalizer.py  t4_join_graph_builder.py  t5_prompt_builder.py  t6_guardrails.py  t7_sql_validator.py
templates/: index.html
tests/: conftest.py
tests/integration/: test_cosql_pipeline.py
tests/unit/: test_a1_sql_composer.py  test_providers.py  test_schema_cache.py  test_t1_schema_introspector.py  test_t2_normalizer.py  test_t4_join_graph.py  test_t5_prompt_builder.py  test_t6_t7.py
